# emosync

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  execution.md  fix_timeout.py  remove_tts.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 079dd315e4c3_.py  20260328_0001_initial_schema.py  20260328_0002_user_auth_columns.py  20260404_0003_vector_index.py  20260404_0004_therapeutic_tables.py
backend/app/: main.py
backend/app/agent/: __init__.py  context.py  graph.py  llm.py  prompts.py  routing.py  state.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py  vector_store.py
backend/app/ingestion/: chunker.py  embedder.py  main_ingest.py  pdf_loader.py  pipeline.py  tagger.py  vector_retriever.py  writer.py
backend/app/models/: __init__.py  assessment.py  calendar_event.py  conversation.py  embedding_chunk.py  journal_entry.py  message.py  mood_log.py  treatment_plan.py  user.py  user_profile.py
backend/tests/: conftest.py  test_agent.py  test_agent_errors.py  test_assessments.py  test_auth.py  test_auth_ratelimit.py  test_calendar_crud.py  test_chat.py  test_gemini_live_bridge.py  test_health.py  test_historian.py  test_historian_parsing.py  test_ingestion.py  test_journal_crud.py  test_mcp.py  test_mcp_servers.py  test_mood.py  test_plans.py  test_profile.py  test_scoring.py  test_vector_query.py  test_voice_edges.py  test_voice_edges.py.patch  test_voice_orchestrator.py  test_voice_provider_fallbacks.py
(+121 files in other folders)
